Fix spacings

--- a/src/assets/sass/base/grid.scss
+++ b/src/assets/sass/base/grid.scss
@@ -1370,6 +1370,9 @@
 .mb-5 {
   margin-bottom: 3rem !important;
 }
+.mb-6 {
+  margin-bottom: 4.5rem !important;
+}
 .mb-auto {
   margin-bottom: auto !important;
 }
